# gitpulse

./: README.md  pyproject.toml
.github/workflows/: publish.yml
gitpulse/: digest.py  git_ops.py  main.py  scanner.py  utils.py  watcher.py
gitpulse/ui/: bulk_results.py  command_palette.py  digest_screen.py  fleet_status.py  sidebar.py  stale_screen.py  styles.tcss  tabs.py
scripts/: bump_version.py
