[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitpulse-tui"
version = "1.2.6"
description = "Git Repo Dashboard TUI — live status, commits, diffs, and branches in your terminal"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.scripts]
gitpulse = "gitpulse.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitpulse*"]

[tool.setuptools.package-data]
gitpulse = ["ui/*.tcss"]
